--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "weatherapplication",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
-    "expo": "~48.0.6",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3"
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "connected-react-router": "^6.9.3",
+    "expo": "~42.0.1",
+    "expo-status-bar": "~1.0.4",
+    "jest": "^29.5.0",
+    "moment": "^2.29.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-native": "0.71",
+    "react-native-dotenv": "^3.1.1",
+    "react-native-web": "^0.13.12",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.9.0",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "1.1.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@babel/core": "^7.9.0",
+    "@types/react-native": "^0.63.68",
+    "typescript": "^4.0.8"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "private": true
 }
