--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest --env=jsdom"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "connected-react-router": "^6.9.3",
+    "enzyme": "^3.11.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "jest": "^29.5.0",
@@ -25,12 +26,17 @@
     "react-router": "^6.9.0",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "1.1.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react-native": "^0.63.68",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "expect": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^21.1.0",
     "typescript": "^4.0.8"
   },
   "jest": {
